syntax = "proto3";
package main;
option go_package = "./;api";

// 将 gRPC-Gateway 批注添加到现有的 proto 文件中
//import "google/api/annotations.proto";

// The greeting service definition.
service Greeter2 {
  // Sends a greeting
  rpc SayHello2 (HelloRequest2) returns (User2) {
    /*option (google.api.http) = {
      post: "/v1/example/echo2"
      body: "*"
    };*/
  }
}

// The request message containing the user's name.
message HelloRequest2 {
  string name = 1;
}

// The response message containing the greetings
message User2 {
  string name = 1;
  string id = 2;
  int32 age = 3;
}