syntax = "proto3";
package api;
//option go_package = "hello-world/api";

// 将 gRPC-Gateway 批注添加到现有的 proto 文件中
import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (User) {}
  /*rpc SayHello (HelloRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }*/
  // rpc SayHelloStream (stream HelloRequest) returns (stream User) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message User {
  string name = 1;
  string id = 2;
  int32 age = 3;
}